--- a/view/__partials/partial_nav.scss
+++ b/view/__partials/partial_nav.scss
@@ -419,7 +419,7 @@
             border-radius: 24px;
 
             a {
-                color: #000;
+                color: gray;
             }
         }
 
